# RenameExportedMacPhotos

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Renamer/: CMakeLists.txt  Renamer.cpp  Renamer.h
